Update pictogram guidance  (#2196)
* new usage guidance

* add usage images

* Update PictogramLibrary.js

* Create temp.mdx

* Add files via upload

* Delete temp.mdx

* Update usage.mdx

* Add files via upload

* Update usage.mdx

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* remove 'resources' as a anchor link

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/guidelines/pictograms/usage.mdx
+++ b/src/pages/guidelines/pictograms/usage.mdx
@@ -10,101 +10,167 @@ import { Bee32 } from '@carbon/icons-react';
 
 <PageDescription>
 
-IBM’s pictograms are visual symbols used to represent ideas, objects, or
-narratives. They can communicate messages at a glance, afford interactivity, and
-simplify complex ideas. They draw from details found in the Plex typeface and
-work well in presentations and marketing communications.
+Use pictograms to communicate in a glance, offer interactivity, or simplify
+complex ideas. Shown here are examples for many use cases such as websites,
+product UI’s, signage, events, and merchandise. When used appropriately, they
+become an elegant addition to the IBM experience.
 
 </PageDescription>
 
 <AnchorLinks>
-  <AnchorLink>Usage</AnchorLink>
+  <AnchorLink>Productive versus expressive</AnchorLink>
+  <AnchorLink>Sizing</AnchorLink>
+  <AnchorLink>Alignment</AnchorLink>
+  <AnchorLink>Containers</AnchorLink>
+  <AnchorLink>Clearance</AnchorLink>
+  <AnchorLink>Color</AnchorLink>
   <AnchorLink>Pictograms in action</AnchorLink>
-  <AnchorLink>Resources</AnchorLink>
 </AnchorLinks>
 
-## Usage
+## Resources
 
-Pictograms are illustrative and expressive and can live within a wide variety of
-scales and environments whether digital or physical. As they are built on the
-same grid as the rest of the IBM icon family, they share many of the same basic
-principles but allow for more visual complexity and communication. You may use
-pictograms to enhance the information you are conveying across various media.
-It’s important to use pictograms sparingly but effectively throughout your
-design.
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      subTitle="IBM Design Language library"
+      aspectRatio="2:1"
+      href="sketch://add-library/cloud/nwqmk"
+      >
 
-![Usage Example](images/13_Usage_0.svg)
+![Sketch icon](../../../images/resource-cards/sketch.svg)
 
-<DoDontRow>
-<DoDont caption="Do treat pictograms as illustrations and provide proper clearance">
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      subTitle="IBM pictograms (.svg)"
+      href="https://github.com/carbon-design-system/carbon/tree/main/packages/pictograms/src/svg"
+      >
 
-![Do give proper space](images/13_Usage_1_do.svg)
+![Github Icon](../../../images/resource-cards/github.png)
 
-</DoDont>
-</DoDontRow>
+</ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      subTitle="IBM productive pictogram master"
+      aspectRatio="2:1"
+      href="https://github.com/carbon-design-system/carbon/raw/main/packages/pictograms/master/productive-pictogram-master.ai"
+      actionIcon="download"
+      >
 
-<DoDontRow>
-<DoDont type="dont" caption="Don’t use pictograms as a replacement for UI icons, that is not their purpose.">
+![Adobe Illustrator logo](../../../images/resource-cards/illustrator.png)
 
-![Don't replace UI icons with pictograms](images/13_Usage_2_dont.svg)
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      subTitle="IBM expressive pictogram master"
+      aspectRatio="2:1"
+      href="https://github.com/carbon-design-system/carbon/raw/main/packages/pictograms/master/expressive-pictogram-master.ai"
+      actionIcon="download"
+      >
 
-</DoDont>
-<DoDont type="dont" caption="Don’t use any pictogram as a logo or in a lockup for product headers, merchandise or events.">
+![Adobe Illustrator logo](../../../images/resource-cards/illustrator.png)
 
-![Don't use pictogram as logo](images/13_Usage_3_dont.svg)
+  </ResourceCard>
+</Column>
+</Row>
 
-</DoDont>
-</DoDontRow>
+## Productive versus expressive
 
-### Sizing
+Productive and expressive pictograms are two distinct types of artwork that work best in different contexts. Productive pictograms are the go-to pictogram type for most contexts; they work across a variety of scales and environments whether physical or digital. They're illustrative and simple, allowing for one or many to be used to convey complex ideas.
 
-Pictograms are used in a range of sizes, the minimum being 48px while the
-maximum size may vary based on application. Use pictograms at their original
-sizes or scale at accepted increments. You may need to adjust the stroke weight
-accordingly to accommodate larger scales. For more information on scaling and
-accessibility, see the section on mini units on the 2X Grid page.
+Expressive pictograms represent a more dynamic option to the standard pictogram, using gradients, layering and transparency to build a sense of depth and movement in the artwork. Due to their visual complexity, expressive pictograms should be used selectively and only in scenarios that call for a graphic with strong presence.
 
 <ArtDirection>
 
-![Different sized pictograms](images/14_Sizing_1-mobile_1.svg)
-![Different sized pictograms](images/14_Sizing_1.svg)
+![Productive pictogram usage example](images/pictograms_usage_example_mobile.png)
+![Productive pictogram usage example](images/pictograms_usage_example.png)
+
+</ArtDirection>
+<Caption>Productive pictograms in context</Caption>
+
+<ArtDirection>
+
+![Expressive pictogram usage example](images/expressivePictograms_usage_example1_mobile.png)
+![Expressive pictogram usage example](images/expressivePictograms_usage_example1.png)
+
+</ArtDirection>
+<Caption>Expressive pictogram in context</Caption>
+
+<DoDontRow>
+<DoDont caption="Treat pictograms as illustations with sufficient sizing.">
+
+![Pictogram with sufficient sizing](images/13_Usage_do.svg)
+
+</DoDont>
+<DoDont type="dont" caption="Don’t use pictograms as a replacement for UI icons, that is not their purpose.">
+
+![Pictograms at UI icon scale](images/13_Usage_dont.svg)
+
+</DoDont>
+</DoDontRow>
+
+<DoDontRow>
+<DoDont caption="Use expressive pictograms as large, bold graphics.">
+
+![Expressive pictogram as hero graphic](images/expressivePictograms_usage_example3.svg)
+
+</DoDont>
+<DoDont type="dont" caption="Don’t overuse expressive pictograms. They should be used sparingly.">
+
+![Don’t overuse expressive pictograms](images/13_Usage_5_dont.png)
+
+</DoDont>
+</DoDontRow>
+
+<DoDontRow>
+<DoDont type="dont" caption="Don’t use productive pictograms as logos or in a lockup for product headers, merchandise or events.">
+
+![Don’t use pictograms as logos](images/13_Usage_3_dont.svg)
+
+</DoDont>
+<DoDont type="dont" caption="Don’t use expressive pictograms as logos or in a lockup for product headers, merchandise or events.">
+
+![Don’t use pictograms as logos](images/13_Usage_3_dont2_v2.svg)
+
+</DoDont>
+</DoDontRow>
+
+## Sizing
+
+Pictograms are used in a range of sizes, the minimum being 48px while the
+maximum size may vary based on application. Use pictograms at their original
+sizes or scale at accepted increments.
+
+<ArtDirection>
+
+![Differently sized productive pictograms](images/14_Sizing_2-mobile.svg)
+![Differently sized productive pictograms](images/14_Sizing_2.svg)
+
+</ArtDirection>
+<ArtDirection>
+
+![Differently sized expressive pictograms](images/14_Sizing_3-mobile.svg)
+![Differently sized expressive pictograms](images/14_Sizing_3.svg)
 
 </ArtDirection>
 
-| Icon size | Stroke width | Padding | Live area | Corner Radius |
-| --------- | ------------ | ------- | --------- | ------------- |
-| 48px      | 1.08px       | 1.5px   | 48px      | 3px           |
-| 64px      | 1.44px       | 2px     | 64px      | 4px           |
-| 80px      | 1.80px       | 2.5px   | 80px      | 5px           |
-| 96px      | 2.16px       | 3px     | 96px      | 6px           |
-| 112px     | 2.52px       | 3.5px   | 112px     | 7px           |
-
-<Caption>
-  There is no set maximum to pictogram sizes. As you scale pictograms to larger
-  sizes you may want to alter stroke weight to accommodate accessibility or
-  environmental factors.
-</Caption>
-
-<Row>
-  <Column colMd={4} colLg={4}>
-    <ResourceCard
-      subTitle="2X Grid: The mini unit"
-      aspectRatio="2:1"
-      href="https://www.ibm.com/design/language/elements/2x-grid#the-mini-unit">
-      <Bee32 />
-    </ResourceCard>
-  </Column>
-</Row>
-
-### Alignment
+## Alignment
 
 Pictograms are optically aligned to the center of the icon grid within the
 boundary box. Centering ensures all pictograms will be aligned correctly when
 exported and used side by side.
 
-![Alignment](images/15_Alignment_1.svg)
+<ArtDirection>
 
-### Containers
+![Alignment Example](images/15_Alignment_1-mobile.svg)
+![Alignment Example](images/15_Alignment_1.svg)
+
+</ArtDirection>
+
+## Containers
 
 Pictograms can be represented in a circular or rectangular container calculated
 based on the padding size.
@@ -124,43 +190,45 @@ based on the padding size.
 </ArtDirection>
 
 <DoDontRow>
-<DoDont caption="Do follow the clearance rule to allow for legibility and touch.">
+<DoDont caption="Keep pictograms at scale and optically center in container when necessary.">
 
-![Containers](images/16_Containers_3_do.svg)
+![keep scale and optically center pictograms](images/16_Containers_3_do.svg)
 
 </DoDont>
-<DoDont type="dont" caption="Don't collapse the pictogram clearance area.">
+<DoDont type="dont" caption="Don’t resize pictograms outside of accepted proportions.">
 
-![Containers don't](images/16_Containers_4_dont.svg)
+![adhere to accepted proportions](images/16_Containers_4_dont.svg)
 
 </DoDont>
 </DoDontRow>
+
 <DoDontRow>
 <DoDont caption="Do use accepted shapes: circle or square for containers.">
 
-![Containers do](images/16_Containers_5_do.svg)
+![use accepted container shapes](images/16_Containers_5_do.svg)
 
 </DoDont>
 <DoDont type="dont" caption="Don’t create new shapes for containers.">
 
-![Containers don't](images/16_Containers_6_dont.svg)
+![avoid unaccepted container shapes](images/16_Containers_6_dont.svg)
 
 </DoDont>
 </DoDontRow>
-<DoDontRow>
-<DoDont caption="Do always optically center align pictograms in their containers.">
 
-![Containers do](images/16_Containers_7_do.svg)
+<DoDontRow>
+<DoDont caption="Always optically center align pictograms in their containers.">
+
+![optically center align pictograms in containers](images/16_Containers_7_do.svg)
 
 </DoDont>
 <DoDont type="dont" caption="Don’t crop pictograms in container.">
 
-![Containers don't](images/16_Containers_8_dont.svg)
+![never crop pictograms in container](images/16_Containers_8_dont.svg)
 
 </DoDont>
 </DoDontRow>
 
-### Clearance
+## Clearance
 
 When designing with pictograms, all artwork should include minimum padding based
 on 1/4 of the scaled grid size. The padding can be increased by increments of
@@ -168,8 +236,21 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 
 <ArtDirection>
 
-![Clearance 1 mobile](images/17_Clearance_1-mobile.svg)
-![Clearance 1 mobile](images/17_Clearance_1.svg)
+![padding applies regardless of container shape](images/17_Clearance_3-mobile.svg)
+
+![padding applies regardless of container shape](images/17_Clearance_3.svg)
+
+</ArtDirection>
+
+<Caption>
+  Padding and spacing rules apply whether using pictograms with or without containers.
+</Caption>
+
+<ArtDirection>
+
+![padding starts at container edge](images/17_Clearance_1-mobile.svg)
+
+![padding starts at container edge](images/17_Clearance_1.svg)
 
 </ArtDirection>
 
@@ -177,112 +258,163 @@ on 1/4 of the scaled grid size. The padding can be increased by increments of
 
 <ArtDirection>
 
-![Clearance 2 mobile](images/17_Clearance_2-mobile.svg)
-![Clearance 2 mobile](images/17_Clearance_2.svg)
+![use one fourth grid padding on circle or square containers](images/17_Clearance_2-mobile.svg)
+
+![use one fourth grid padding on circle or square containers](images/17_Clearance_2.svg)
 
 </ArtDirection>
 
 <Caption>Padding is the same for both circle and square containers.</Caption>
 
+<DoDontRow>
+<DoDont caption="Follow the clearance rule to allow for legibility and touch.">
+
+![allow clearance for legibility and touch](images/17_Clearance_4_do.svg)
+
+</DoDont>
+<DoDont type="dont" caption="Don’t collapse the pictogram clearance area.">
+
+![keep pictogram clearance area](images/17_Clearance_5_dont.svg)
+
+</DoDont>
+</DoDontRow>
+
+## Color
+
+Pictograms on backgrounds must always pass color contrast requirements. When
+pairing pictograms with backgrounds, follow color family rules to ensure that
+the pictogram does not clash with or blend into the background. Dark background
+colors should range between values 70–100 while light backgrounds should not
+exceed values 10–20.
+
 <ArtDirection>
 
-![Clearance 3 mobile](images/17_Clearance_3-mobile.svg)
-![Clearance 3 mobile](images/17_Clearance_3.svg)
+![pictogram with color contrast example](/images/10_Backgrounds-mobile_1.svg)
+![pictogram with color contrast example](/images/10_Backgrounds_1.svg)
 
 </ArtDirection>
 
-<Caption>
-  Same spacing rules apply when using pictograms without containers.
-</Caption>
-
 <DoDontRow>
-<DoDont caption="Do keep pictograms at scale and optically center in container when necessary.">
+<DoDont caption="Follow the 5-step color rule and only match tones from the same color family or use grayscale backgrounds.">
 
-![Clearance 4 mobile](images/17_Clearance_4_do.svg)
+![pictogram background example](/images/10_Backgrounds_2_do.svg)
 
 </DoDont>
-<DoDont type="dont" caption="Don’t resize pictograms outside of accepted proportions.">
+<DoDont caption="Follow gradient rules when placing them on backgrounds.">
 
-![Clearance 5 mobile](images/17_Clearance_5_dont.svg)
+![pictogram background example](/images/10_Backgrounds_3_do.svg)
+
+</DoDont>
+</DoDontRow>
+
+<DoDontRow>
+<DoDont type="dont" caption="Don’t place dark tones on dark backgrounds.">
+
+![pictogram background example](/images/10_Backgrounds_4_dont.svg)
+
+</DoDont>
+<DoDont type="dont" caption="Don’t place light tones on light backgrounds.">
+
+![pictogram background example](/images/10_Backgrounds_5_dont.svg)
+
+</DoDont>
+</DoDontRow>
+
+<DoDontRow>
+<DoDont type="dont" caption="Don’t place gradient picto’s on backgrounds that are not 80 and above or 20 and below.">
+
+![pictogram background example](/images/10_Backgrounds_6_dont.svg)
+
+</DoDont>
+<DoDont type="dont" caption="Don’t place gradient picto’s on gradient backgrounds.">
+
+![pictogram background example](/images/10_Backgrounds_7_dont.svg)
+
+</DoDont>
+</DoDontRow>
+
+### Expressive pictogram color
+
+Expressive pictograms have four color themes: dark, light, monochromatic dark, and monochromatic light. To ensure accessibility, use the color theme that corresponds with the pictogram’s background color.
+
+<ArtDirection>
+
+![Expressive pictogram in 4 color themes](images/expressivePictograms_usage-color_mobile.svg)
+![Expressive pictogram icon in 4 color themes](images/expressivePictograms_usage-color.svg)
+
+</ArtDirection>
+
+| Background color value | Pictogram theme                   |
+| ---------------------- | --------------------------------- |
+| White, 10–20           | Light                             |
+| 30–50                  | Monochromatic light (Black)       |
+| 50–70                  | Monochromatic dark (White)        |
+| 80–100, Black          | Dark                              |
+
+<DoDontRow>
+<DoDont caption="Use dark-theme pictograms on dark backgrounds and light-theme pictograms on light backgrounds.">
+
+![Expressive pictogram with correct color theme](images/expressivePictograms_usage-colorDo_v2.svg)
+
+</DoDont>
+<DoDont type="dont" caption="Don’t use light-theme pictograms on dark backgrounds or dark-theme pictograms on light backgrounds.">
+
+![Expressive pictogram with incorrect color theme](images/expressivePictograms_usage-colorDont_v2.svg)
+
+</DoDont>
+</DoDontRow>
+<DoDontRow>
+<DoDont type="dont" caption="Don’t place expressive pictograms on backgrounds that aren't 80 and above or 20 and below.">
+
+![Expressive pictogram on Blue 60](images/expressivePictograms_usage-colorDont_3.svg)
+
+</DoDont>
+<DoDont type="dont" caption="Don’t place expressive pictograms on gradient backgrounds.">
+
+![Expressive pictogram on gradient background](images/expressivePictograms_usage-colorDont_4_v2.svg)
 
 </DoDont>
 </DoDontRow>
 
 ## Pictograms in action
 
-<Row>
-<Column colMd={6} colLg={8}>
+<ImageGallery>
+
+<ImageGalleryImage alt="pictogram on sign" title="Pictogram on sign" col={8}>
 
 ![Pictogram on Sign](images/18_In-Context_1.jpg)
 
-</Column>
-<Column colMd={6} colLg={4}>
+</ImageGalleryImage>
 
-![Pictogram as logo](images/18_In-Context_2.svg)
+<ImageGalleryImage alt="expressive pictogram on web" title="Expressive pictogram on web" col={4}>
 
-</Column>
-</Row>
+![Expressive pictogram on web](images/expressivePictograms_usage_example2.png)
 
-<Row>
-<Column colSm={4} colMd={4} colLg={4}>
+</ImageGalleryImage>
+
+<ImageGalleryImage alt="pictogram on hat" title="Pictogram on hat" col={4}>
 
 ![Pictogram on hat](images/18_In-Context_3.jpg)
 
-</Column>
-<Column colSm={4} colMd={4} colLg={4}>
+</ImageGalleryImage>
 
-![Pictogram on poster](images/18_In-Context_4.svg)
+<ImageGalleryImage alt="expressive pictogram on poster" title="Expressive pictogram on poster" col={8}>
 
-</Column>
-<Column colSm={4} colMd={4} colLg={4}>
-<Row>
+![Expressive pictogram on poster](images/18_In-Context_4.jpg)
 
-![Pictogram on poster](images/18_In-Context_6.svg)
+</ImageGalleryImage>
 
-</Row>
-<Row>
-
-![Pictogram example](images/18_In-Context_5.jpg)
-
-</Row>
-
-</Column>
-</Row>
-
-<Row>
-<Column colMd={6} colLg={8}>
+<ImageGalleryImage alt="pictogram on card" title="Pictogram on card" col={8}>
 
 ![Pictogram on card](images/18_In-Context_7.svg)
 
-</Column>
-<Column colMd={6} colLg={4}>
+</ImageGalleryImage>
+
+<ImageGalleryImage alt="pictogram on wallpaper" title="Pictogram on wallpaper" col={4}>
 
 ![Pictogram on wallpaper](images/18_In-Context_8.jpg)
 
-</Column>
-</Row>
+</ImageGalleryImage>
 
-## Resources
+</ImageGallery>
 
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Pictograms"
-    href="https://github.com/carbon-design-system/carbon/tree/main/packages/pictograms"
-    >
-
-<MdxIcon name="github" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4}  noGutterSm>
-  <ResourceCard
-    subTitle="Pictograms-React"
-    href="https://github.com/carbon-design-system/carbon/tree/main/packages/pictograms-react"
-    >
-
-<MdxIcon name="github" />
-
- </ResourceCard>
-</Column>
-</Row>
