new image, update table, remove from Style tab

--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -221,17 +221,18 @@ size.
 <Row>
 <Column colLg={8}>
 
-![Button sizes](images/button_usage_3-with-lgExp.png)
+![Button sizes](images/button_usage_3-with-lgExp2.png)
 
 </Column>
 </Row>
 
-| Name         | Height (px/rem) | Use Case                                                                                                                                                                                                                                                                           |
-| ------------ | --------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| _Full bleed_ | 64/4            | Use when buttons bleed to the edge of a larger component, like side panels or modals. _Note: This variant is not offered in the kit because it does not have a coded counterpart. Carbon only offers this button in the context of the [modal component](components/modal/usage)._ |
-| _Default_    | 48/3            | Use as primary page actions and other standalone actions.                                                                                                                                                                                                                          |
-| _Field_      | 40/2.5          | Use when buttons are paired with input fields.                                                                                                                                                                                                                                     |
-| _Small_      | 32/2            | Use when there is not enough vertical space for the default or field-sized button.                                                                                                                                                                                                 |
+| Button size        | Height (px / rem) | Type size (px / token) | Use case                                                                                                                                                                                                                                                 |
+| ------------------ | ----------------- | ---------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _Full bleed_       | 64 / 4            | 14px / $body-short-01  | Use when buttons bleed to the edge of a larger component, like side panels or modals. _Note: This variant is not offered in the kit because it does not have a coded counterpart. Carbon only offers this button in the context of the modal component._ |
+| _Default_          | 48 / 3            | 14px / $body-short-01  | Use as primary page actions and other standalone actions.                                                                                                                                                                                                |
+| _Large expressive_ | 48 / 3            | 16px / $body-short-02  | The larger expressive type size within this button provides balance when used with 16px body copy. Used by IBM.com team in website banners.                                                                                                              |
+| _Field_            | 40 / 2.5          | 14px / $body-short-01  | Use when buttons are paired with input fields.                                                                                                                                                                                                           |
+| _Small_            | 32 / 2            | 14px / $body-short-01  | Use when there is not enough vertical space for the default or field-sized button.                                                                                                                                                                       |
 
 ### Emphasis
 
