fix: add smart quote to homepage

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -131,7 +131,7 @@ building websites and user interfaces.
 
 <ArticleCard
     color="dark"
-    title="Carbon's 2021 release: April update"
+    title="Carbon’s 2021 release: April update"
     author="Josh Black"
     date="April 22, 2021"
     href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
