--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -22,7 +22,7 @@ about design systems.
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
-    title="Carbon's 2021 release: April update"
+    title="Carbon’s 2021 release: April update"
     author="Josh Black"
     date="April 22, 2021"
     href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
