--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -201,17 +201,17 @@ glyph, the space between the button label and the glyph must be greater than or
 equal to 16 pixels / 1 rem. This is to accommodate for instances where two or
 more buttons with glyphs appear together.
 
-| Class             | Property                    | px / rem | Spacing token |
-| ----------------- | --------------------------- | -------- | ------------- |
-| `.bx--btn`        | padding-left                | 16 / 1   | `$spacing-05` |
-| `.bx--btn`        | padding-right               | 64 / 4   | –             |
-| `.bx--btn--sm`    | padding-left                | 16 / 1   | `$spacing-05` |
-| `.bx--btn--sm`    | padding-right               | 64 / 4   | –             |
-| `.bx--btn--ghost` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-| `.bx--btn__icon`  | margin-left, margin-right   | 16 / 1   | `$spacing-05` |
-| `svg`             | size                        | 16 x 16  | –             |
+| Class                      | Property                    | px / rem | Spacing token |
+| -------------------------- | --------------------------- | -------- | ------------- |
+| `.bx--btn`                 | padding-left                | 16 / 1   | `$spacing-05` |
+| `.bx--btn`                 | padding-right               | 64 / 4   | –             |
+| `.bx--btn--sm`             | padding-left                | 16 / 1   | `$spacing-05` |
+| `.bx--btn--sm`             | padding-right               | 64 / 4   | –             |
+| `.bx--btn--ghost`          | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+| `.bx--btn__icon`           | margin-left, margin-right   | 16 / 1   | `$spacing-05` |
+| `svg`                      | size                        | 16 x 16  | –             |
 | `.bx--btn--expressive svg` | size                        | 20 x 20  | –             |
-| `:focus`          | box-shadow: inset           | 1px      | –             |
+| `:focus`                   | box-shadow: inset           | 1px      | –             |
 
 <Row>
 <Column colLg={8}>
@@ -232,3 +232,27 @@ recommended by design as the proper distance between buttons.
 | ---------------- | ------------------------- | -------- | ------------- |
 | External: button | margin                    | 1px      | -             |
 | Button pairings  | margin-left, margin-right | 0        | –             |
+
+## Sizes
+
+There are four button sizes for use in productive situations—full bleed,
+default, inline, and small. The large expressive button is used in editorial and
+digital marketing experiences. See
+[Button size](/components/button/usage#button-size) on the Usage tab for more
+information about specific use cases for each button size.
+
+| Button size        | Height (px / rem) | Type size (px / token) |
+| ------------------ | ----------------- | ---------------------- |
+| _Full bleed_       | 64 / 4            | 14px / \$body-short-01 |
+| _Default_          | 48 / 3            | 14px / \$body-short-01 |
+| _Large expressive_ | 48 / 3            | 16px / \$body-short-02 |
+| _Field_            | 40 / 2.5          | 14px / \$body-short-01 |
+| _Small_            | 32 / 2            | 14px / \$body-short-01 |
+
+<Row>
+<Column colLg={8}>
+
+![Button sizes](images/button_usage_3.png)
+
+</Column>
+</Row>
