--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -216,23 +216,24 @@ B. Container (optional) <br /> C. Icon
 
 Buttons are named according to their size and usage in the Carbon Sketch kit and
 in the code. The table below adds more context around the use case for each
-size.
+size. For guidance on button heights as well as type sizes and tokens, see
+[Sizes](/components/button/style#sizes.mdx) on the Style tab.
+
+| Button size        | Use case                                                                                                                                                                                                                                                 |
+| ------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _Full bleed_       | Use when buttons bleed to the edge of a larger component, like side panels or modals. _Note: This variant is not offered in the kit because it does not have a coded counterpart. Carbon only offers this button in the context of the modal component._ |
+| _Default_          | Use as primary page actions and other standalone actions.                                                                                                                                                                                                |
+| _Large expressive_ | The larger expressive type size within this button provides balance when used with 16px body copy. Used by IBM.com team in website banners.                                                                                                              |
+| _Field_            | Use when buttons are paired with input fields.                                                                                                                                                                                                           |
+| _Small_            | Use when there is not enough vertical space for the default or field-sized button.                                                                                                                                                                       |
 
 <Row>
 <Column colLg={8}>
 
-![Button sizes](images/button_usage_3-with-lgExp2.png)
+![Button sizes](images/button_usage_3.png)
 
 </Column>
 </Row>
-
-| Button size        | Height (px / rem) | Type size (px / token) | Use case                                                                                                                                                                                                                                                 |
-| ------------------ | ----------------- | ---------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| _Full bleed_       | 64 / 4            | 14px / $body-short-01  | Use when buttons bleed to the edge of a larger component, like side panels or modals. _Note: This variant is not offered in the kit because it does not have a coded counterpart. Carbon only offers this button in the context of the modal component._ |
-| _Default_          | 48 / 3            | 14px / $body-short-01  | Use as primary page actions and other standalone actions.                                                                                                                                                                                                |
-| _Large expressive_ | 48 / 3            | 16px / $body-short-02  | The larger expressive type size within this button provides balance when used with 16px body copy. Used by IBM.com team in website banners.                                                                                                              |
-| _Field_            | 40 / 2.5          | 14px / $body-short-01  | Use when buttons are paired with input fields.                                                                                                                                                                                                           |
-| _Small_            | 32 / 2            | 14px / $body-short-01  | Use when there is not enough vertical space for the default or field-sized button.                                                                                                                                                                       |
 
 ### Emphasis
 
