docs: content copy edit, new image

--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -212,7 +212,7 @@ B. Container (optional) <br /> C. Icon
   </DoDont>
 </DoDontRow>
 
-### Button size
+### Button sizes
 
 Buttons are named according to their size and usage in the Carbon Sketch kit and
 in the code. The table below adds more context around the use case for each
