--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -238,7 +238,7 @@ recommended by design as the proper distance between buttons.
 There are four button sizes for use in productive situations—full bleed,
 default, inline, and small. The large expressive button is used in editorial and
 digital marketing experiences. See
-[Button size](/components/button/usage#button-size) on the Usage tab for more
+[Button sizes](/components/button/usage#button-sizes) on the Usage tab for more
 information about specific use cases for each button size.
 
 | Button size        | Height (px / rem) | Type size (px / token) |
