add floating bar & bullet demos to data-viz pages

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -38,6 +38,17 @@ appropriate chart type.
 
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
+    title="Floating bar"
+    href="/data-visualization/simple-charts#bar-(floating)"
+    >
+
+![GATSBY_EMPTY_ALT](images/barfloating.svg)
+
+</OverviewCard>
+</Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
     title="Lollipop"
     href="/data-visualization/simple-charts#lollipop"
     >
@@ -172,6 +183,18 @@ appropriate chart type.
 
 </OverviewCard>
 </Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
+    title="Bullet"
+    href="/data-visualization/simple-charts/#bullet"
+    >
+
+![GATSBY_EMPTY_ALT](images/bullet.svg)
+
+</OverviewCard>
+</Column>
+
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Stacked area"
