feedback, apostrophe run, add link to Releases

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -53,7 +53,8 @@ layout building in line with the design language.
 
 With no changes to the IBM Design Language, v11 will not require any
 brand-driven product redesigns and teams are free to update at their
-convenience.
+convenience. For more details about this release, see our
+[v11 release page](/whats-happening/v11-release/).
 
 ### Carbon v10
 
