--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -45,7 +45,8 @@ convenience.
 - No changes to the IBM Design Language
 - No need to rebuild your UI
 - Tokens that are changing will continue to work in v11
-- There's no rush to update if what you have today works for you
+- There‘s no rush to update if you don‘t want to immediately take advantage of
+  v11‘s features
 
 ## Read more in Medium
 
@@ -108,7 +109,7 @@ convenience.
   - Easily build our more accessible experiences with our accessibility
     component primitives.
 
-### What are the benefits to my product's customers?
+### What are the benefits to my product‘s customers?
 
 - Light/dark mode support.
 
@@ -138,7 +139,7 @@ convenience.
 - Assets that were deprecated from v9 to v10 will be removed in v11.
 
 - Assets that are deprecated in v10 will remain in v11 and will be removed in
-  v12. While the timeline of v12 has not been set, the team's intent is for
+  v12. While the timeline of v12 has not been set, the team‘s intent is for
   major versions to be at minimum 12 months apart.
 
 ### Will I need to redesign my product?
@@ -168,7 +169,7 @@ convenience.
   symbols will automatically receive the v11 updates once the library update is
   accepted by the users in each design file.
 
-- If you're not ready to update to v11, you can stop accepting library updates
+- If you‘re not ready to update to v11, you can stop accepting library updates
   to that file until you are ready.
 
 - Sketch files for v10 will be available in the GitHub archive but will no
@@ -177,7 +178,7 @@ convenience.
 
 - The effort to update local/PAL assets depends on the structure of files. If
   you are using the Carbon layer styles then the update will be automatic. If
-  you're using hard values and just specing the token names, then you will need
+  you‘re using hard values and just specing the token names, then you will need
   to update your specs.
 
 - Read the
