home page tile update, copyedits

--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -31,7 +31,7 @@ With no changes to the IBM Design Language, v11 will not require any
 brand-driven product redesigns and teams are free to update at their
 convenience.
 
-### What's new
+### What’s new
 
 - CSS grid lets you more accurately build layouts in line with the design
   language
@@ -40,13 +40,13 @@ convenience.
 - Size props introduced for icons to reduce icon package size
 - Reduced compile times with new Sass modules
 
-### What's not changing
+### What’s not changing
 
 - No changes to the IBM Design Language
 - No need to rebuild your UI
 - Tokens that are changing will continue to work in v11
-- There‘s no rush to update if you don‘t want to immediately take advantage of
-  v11‘s features
+- There’s no rush to update if you don’t want to immediately take advantage of
+  v11’s features
 
 ## Read more in Medium
 
@@ -59,7 +59,7 @@ convenience.
     href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
     >
 
-![Carbon's 2021 release: April update](images/carbon_2021-april-update.png)
+![Carbon’s 2021 release: April update](images/carbon_2021-april-update.png)
 
 </ArticleCard>
 </Column>
@@ -109,7 +109,7 @@ convenience.
   - Easily build our more accessible experiences with our accessibility
     component primitives.
 
-### What are the benefits to my product‘s customers?
+### What are the benefits to my product’s customers?
 
 - Light/dark mode support.
 
@@ -139,7 +139,7 @@ convenience.
 - Assets that were deprecated from v9 to v10 will be removed in v11.
 
 - Assets that are deprecated in v10 will remain in v11 and will be removed in
-  v12. While the timeline of v12 has not been set, the team‘s intent is for
+  v12. While the timeline of v12 has not been set, the team’s intent is for
   major versions to be at minimum 12 months apart.
 
 ### Will I need to redesign my product?
@@ -169,7 +169,7 @@ convenience.
   symbols will automatically receive the v11 updates once the library update is
   accepted by the users in each design file.
 
-- If you‘re not ready to update to v11, you can stop accepting library updates
+- If you’re not ready to update to v11, you can stop accepting library updates
   to that file until you are ready.
 
 - Sketch files for v10 will be available in the GitHub archive but will no
@@ -178,7 +178,7 @@ convenience.
 
 - The effort to update local/PAL assets depends on the structure of files. If
   you are using the Carbon layer styles then the update will be automatic. If
-  you‘re using hard values and just specing the token names, then you will need
+  you’re using hard values and just specing the token names, then you will need
   to update your specs.
 
 - Read the
