update images on the team page

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -115,7 +115,7 @@ and successful in designing digital experiences and products.
 </Profile>
 <Profile name="Eliad Moosavi" title="Senior Software Developer, Technical Lead">
 
-![Eliad Moosavi headshot](/images/team/moosavi_eliad.jpg)
+![Eliad Moosavi headshot](/images/team/moosavi_eliad.png)
 
 </Profile>
 <Profile name="Scott Strubberg" title="Front-end Developer">
@@ -131,19 +131,19 @@ and successful in designing digital experiences and products.
 
 <Profile name="Dean Williams" title="Senior Development Manager">
 
-![Dean Williams headshot](/images/team/williams_dean.jpg)
+![Dean Williams headshot](/images/team/williams_dean.png)
 
 </Profile>
 
 <Profile name="Natasha Decoste" title="Software Developer">
 
-![Natasha Decoste headshot](/images/team/decoste_natasha.jpg)
+![Natasha Decoste headshot](/images/team/decoste_natasha.png)
 
 </Profile>
 
 <Profile name="Nina Li" title="Project Manager">
 
-![Nina Li headshot](/images/team/li_nina.jpg)
+![Nina Li headshot](/images/team/li_nina.png)
 
 </Profile>
 
@@ -155,7 +155,7 @@ and successful in designing digital experiences and products.
 
 <Profile name="Zvonimir Fras" title="Staff Software Developer">
 
-![Zvonimir Fras headshot](/images/team/fras_zvonimir.jpg)
+![Zvonimir Fras headshot](/images/team/fras_zvonimir.png)
 
 </Profile>
 </Row>
