--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -12,6 +12,13 @@ developers, and with no brand updates, you can update at your convenience.
 
 </PageDescription>
 
+<InlineNotification>
+
+**Note:** The Carbon v11 release is currently an alpha release. Be on the
+lookout for the public preview release available in the coming months.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
@@ -43,10 +50,20 @@ convenience.
 ### What’s not changing
 
 - No changes to the IBM Design Language
-- No need to rebuild your UI
+- No need to redesign your UI
 - Tokens that are changing will continue to work in v11
-- There’s no rush to update if you don’t want to immediately take advantage of
-  v11’s features
+- We recommend updating as soon as possible to take advantage of v11’s features
+- Assets that are deprecated in v10 will remain in v11 and will be removed in
+  v12.
+
+  ### What's breaking
+
+  - For teams on v10, there are some things that will require your attention.
+    For details about what's breaking, see
+    [GitHub](https://github.com/carbon-design-system/carbon/tree/main/docs/migration).
+  - Also, see our
+    [April update](https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea)
+    for more information about what you can do to prepare ahead of time.
 
 ## Read more in Medium
 
