--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -89,7 +89,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 <Caption>Multiselect dropdown states</Caption>
 
-### Inline loading
+### Inline dropdown
 
 | Element  | State              | Property         | Color token          |
 | -------- | ------------------ | ---------------- | -------------------- |
