update highlights based on feedback

--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -35,8 +35,7 @@ more predictable developer experience, and introducing CSS grid for accurate
 layout building in line with the design language.
 
 With no changes to the IBM Design Language, v11 will not require any
-brand-driven product redesigns and teams are free to update at their
-convenience.
+brand-driven product redesigns.
 
 ### What’s new
 
@@ -52,18 +51,8 @@ convenience.
 - No changes to the IBM Design Language
 - No need to redesign your UI
 - Tokens that are changing will continue to work in v11
-- We recommend updating as soon as possible to take advantage of v11’s features
 - Assets that are deprecated in v10 will remain in v11 and will be removed in
-  v12.
-
-  ### What's breaking
-
-  - For teams on v10, there are some things that will require your attention.
-    For details about what's breaking, see
-    [GitHub](https://github.com/carbon-design-system/carbon/tree/main/docs/migration).
-  - Also, see our
-    [April update](https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea)
-    for more information about what you can do to prepare ahead of time.
+  v12
 
 ## Read more in Medium
 
