--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -40,19 +40,19 @@ brand-driven product redesigns.
 ### What’s new
 
 - CSS grid lets you more accurately build layouts in line with the design
-  language
-- Inline theming for light/dark modes
-- Token renaming for better understanding and ease of use
-- Size props introduced for icons to reduce icon package size
-- Reduced compile times with new Sass modules
+  language.
+- Inline theming for light/dark modes.
+- Token renaming for better understanding and ease of use.
+- Size props introduced for icons to reduce icon package size.
+- Reduced compile times with new Sass modules.
 
 ### What’s not changing
 
-- No changes to the IBM Design Language
-- No need to redesign your UI
-- Tokens that are changing will continue to work in v11
+- No changes to the IBM Design Language.
+- No need to redesign your UI.
+- Tokens that are changing will continue to work in v11.
 - Assets that are deprecated in v10 will remain in v11 and will be removed in
-  v12
+  v12.
 
 ## Read more in Medium
 
