updates to titles, alphabetized list

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -48,6 +48,11 @@ and successful in designing digital experiences and products.
 ![Alessandra Davila headshot](/images/team/davila_ale.png)
 
 </Profile>
+<Profile name="Natasha Decoste" title="Software Developer, Data visualization">
+
+![Natasha Decoste headshot](/images/team/decoste_natasha.png)
+
+</Profile>
 <Profile name="Thy Do" title="Visual Designer">
 
 ![Thy Do headshot](/images/team/do_thy.png)
@@ -56,6 +61,11 @@ and successful in designing digital experiences and products.
 <Profile name="TJ Egan" title="Front-end Developer">
 
 ![TJ Egan headshot](/images/team/egan_tj.png)
+
+</Profile>
+<Profile name="Zvonimir Fras" title="Staff Software Developer, Data visualization">
+
+![Zvonimir Fras headshot](/images/team/fras_zvonimir.png)
 
 </Profile>
 <Profile name="Anna Gonzales" title="Senior Visual Designer">
@@ -88,9 +98,19 @@ and successful in designing digital experiences and products.
 ![Tracey King headshot](/images/team/king_tracey.png)
 
 </Profile>
+<Profile name="Nina Li" title="Project Manager, Data visualization">
+
+![Nina Li headshot](/images/team/li_nina.png)
+
+</Profile>
 <Profile name="Josefina Mancilla"  title="Front-end Developer">
 
 ![Josefina Mancilla headshot](/images/team/mancilla_josefina.png)
+
+</Profile>
+<Profile name="Eliad Moosavi" title="Senior Software Developer and Technical Lead, Data visualization">
+
+![Eliad Moosavi headshot](/images/team/moosavi_eliad.png)
 
 </Profile>
 <Profile name="Vince Picone" title="Software Developer">
@@ -113,9 +133,9 @@ and successful in designing digital experiences and products.
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
-<Profile name="Eliad Moosavi" title="Senior Software Developer, Technical Lead">
+<Profile name="Cal Smith" title="Angular Technical Lead, Data visualization">
 
-![Eliad Moosavi headshot](/images/team/moosavi_eliad.png)
+![Cal Smith headshot](/images/team/smith_cal.png)
 
 </Profile>
 <Profile name="Scott Strubberg" title="Front-end Developer">
@@ -128,34 +148,9 @@ and successful in designing digital experiences and products.
 ![Andrew Wang headshot](/images/team/wang_andrew.png)
 
 </Profile>
-
-<Profile name="Dean Williams" title="Senior Development Manager">
+<Profile name="Dean Williams" title="Senior Development Manager, Data visualization">
 
 ![Dean Williams headshot](/images/team/williams_dean.png)
-
-</Profile>
-
-<Profile name="Natasha Decoste" title="Software Developer">
-
-![Natasha Decoste headshot](/images/team/decoste_natasha.png)
-
-</Profile>
-
-<Profile name="Nina Li" title="Project Manager">
-
-![Nina Li headshot](/images/team/li_nina.png)
-
-</Profile>
-
-<Profile name="Cal Smith" title="Angular Technical Lead">
-
-![Cal Smith headshot](/images/team/smith_cal.png)
-
-</Profile>
-
-<Profile name="Zvonimir Fras" title="Staff Software Developer">
-
-![Zvonimir Fras headshot](/images/team/fras_zvonimir.png)
 
 </Profile>
 </Row>
