comms: copy tweak to message

--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -2,13 +2,13 @@
 title: The v11 release
 description:
   The Carbon v11 release includes great quality of life updates for designers
-  and developers, and with no brand updates, you can update at your convenience.
+  and developers, and with no brand updates, no product redesigns are required.
 ---
 
 <PageDescription>
 
 The Carbon v11 release includes great quality of life updates for designers and
-developers, and with no brand updates, you can update at your convenience.
+developers, and with no brand updates, no product redesigns are required.
 
 </PageDescription>
 
