--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -18,7 +18,7 @@ templates, color palettes, GitHub repos, and design tools.
   <AnchorLink>Elements</AnchorLink>
   <AnchorLink>Extensions</AnchorLink>
   <AnchorLink>Fonts</AnchorLink>
-  <AnchorLink>Gatsby theme Sketch kit</AnchorLink>
+  <AnchorLink>Gatsby theme resources</AnchorLink>
   <AnchorLink>GitHub repos</AnchorLink>
   <AnchorLink>Mobile Sketch resources</AnchorLink>
 
@@ -145,12 +145,12 @@ Carbon uses the open-source typeface [IBM Plex](https://github.com/ibm/plex) –
 carefully designed to meet IBM's needs as a global technology company and
 reflect IBM's spirit, beliefs, and design principles.
 
-## Gatsby theme Sketch kit
+## Gatsby theme resources
 
-For anyone working on a Gatsby-themed site, this updated Sketch kit has all the
-components, patterns, and sample layouts that have been developed by teams
-within the IBM ecosystem. A great resource for designers working on new pages
-for PAL sites or any other sites using the Gatsby theme.
+The Gatsby Sketch kit has all the components, patterns, and sample layouts that
+have been developed by teams within the IBM ecosystem. The Gatsby theme site
+includes the components, guidelines, and everything you need to create and
+contribute to Carbon sites.
 
 <Row className="resource-card-group">
 
@@ -160,6 +160,16 @@ for PAL sites or any other sites using the Gatsby theme.
     href="sketch://add-library/cloud/304313c1-29a8-4946-a6f0-51dbec953bc2"
     actionIcon="download">
     <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Gatsby theme Carbon site"
+    href="https://gatsby-theme-carbon.vercel.app/"
+    actionIcon="launch">
+
+![Gatsby icon](images/gatsby.svg)
+
   </ResourceCard>
 </Column>
 </Row>
