--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -185,3 +185,27 @@ your framework of choice.
 </Column>
 
 </Row>
+
+### Gatsby theme resources
+
+<Row className="resource-card-group">
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Gatsby theme Sketch kit"
+    href="sketch://add-library/cloud/304313c1-29a8-4946-a6f0-51dbec953bc2"
+    actionIcon="download">
+    <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Gatsby theme Carbon site"
+    href="https://gatsby-theme-carbon.vercel.app/"
+    actionIcon="launch">
+
+![Gatsby icon](images/gatsby.svg)
+
+  </ResourceCard>
+</Column>
+</Row>
