added anchor links, changed headings to h2s

--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -12,7 +12,16 @@ your framework of choice.
 
 </PageDescription>
 
-### GitHub repos
+<AnchorLinks>
+
+<AnchorLink>GitHub repos</AnchorLink>
+<AnchorLink>Storybooks</AnchorLink>
+<AnchorLink>Tools</AnchorLink>
+<AnchorLink>Gatsby theme resources</AnchorLink>
+
+</AnchorLinks>
+
+## GitHub repos
 
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
@@ -80,7 +89,7 @@ your framework of choice.
 </Column>
 </Row>
 
-### Storybooks
+## Storybooks
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
@@ -126,7 +135,7 @@ your framework of choice.
 </Column>
 </Row>
 
-### Tools
+## Tools
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
@@ -186,7 +195,7 @@ your framework of choice.
 
 </Row>
 
-### Gatsby theme resources
+## Gatsby theme resources
 
 <Row className="resource-card-group">
 
